# thereversigame

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Dockerfile  backend  build.ninja  cmake_install.cmake
backend/lib/: httplib.h
backend/src/: main.cpp
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.module.scss  main.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/Game/: Game.css  GamePage.tsx
frontend/src/pages/Hello/: HelloPage.module.scss  HelloPage.tsx  index.ts
